# namada-rest

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
config/: Settings.example.toml
src/: main.rs  utils.rs
